# ted

./: .gitignore  .gitmodules  CMakeLists.txt  ConfigureHeader.cmake  Doxyfile  README  tests.cpp
include/ted/: address.hpp  address_of.hpp  assuming.hpp  atomic.hpp  category.hpp  compact.hpp  dumb.hpp  dyn.hpp  enum.hpp  exchange.hpp  fence.hpp  find.hpp  function.hpp  fuzz.hpp  hyp.hpp  is_truthy.hpp  iterator.hpp  lift.hpp  memfn.hpp  memory_order.hpp  most_derived.hpp  noassuming.hpp  nosame.hpp  null.hpp  operator.hpp  pointer.hpp  provider.hpp  range.hpp  ref.hpp  same.hpp  similar_category.hpp  size.hpp  span.hpp  true.hpp  uninitialized.hpp  zero.hpp
include/ted/async/: coroutine.hpp  done_task.hpp  launch.hpp  noexcept_coro.hpp  operation.hpp  pending_task.hpp  promise.hpp  rogue.hpp  suspends.hpp  void_task.hpp
tests/: address.cpp  all_headers.cpp  annotated.cpp  async.cpp  atomic.cpp  dumb.cpp  dyn.cpp  find.cpp  function.cpp  pointer.cpp  provider.cpp
